--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
+    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'org.project'
@@ -48,12 +49,22 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
-// queryDSL 추가 : QueryDSL 빌드 옵션
+//querydsl 추가 시작
 def querydslDir = "$buildDir/generated/querydsl"
 
+querydsl {
+    jpa = true
+    querydslSourcesDir = querydslDir
+}
 sourceSets {
     main.java.srcDir querydslDir
 }
+compileQuerydsl{
+    options.annotationProcessorPath = configurations.querydsl
+}
 configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
     querydsl.extendsFrom compileClasspath
 }
